--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,28 @@
 	padding: 0;
 }
 
+.container {
+    width: 100%;
+    background-color: #aadede;
+    height: 300px;
+}
+
+#square {
+    height: 100px;
+    width: 100px;
+    margin: auto;
+     margin-top: 100px;
+    background-color: grey;
+}
+
+.black {
+    background-color: black;
+}
+
+.white {
+    background-color: white;
+}
+
 .box1 {
     width: 100%;
     height: 40px;
